<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#EEEEEE"
    android:padding="16dp">

    <Button
        android:id="@+id/btnRetour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_retour"
        android:textAllCaps="true"
        android:theme="@style/Bouton"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titre_parametres"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/btnInfosPerso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_infos_perso"
        android:layout_marginTop="30dp"
        android:theme="@style/Bouton"/>

    <Button
        android:id="@+id/btnNotifications"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_notifications"
        android:layout_marginTop="12dp"
        android:theme="@style/Bouton"/>

    <Button
        android:id="@+id/btnGeneral"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_general"
        android:layout_marginTop="12dp"
        android:theme="@style/Bouton"/>

    <Button
        android:id="@+id/btnDeconnexion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_deconnexion"
        android:layout_marginTop="12dp"
        android:theme="@style/Bouton"/>

</LinearLayout>