<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="40dp"
    android:paddingBottom="40dp">

    <TextView
        android:id="@+id/titleConnexion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:text="@string/titleConnexion"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textAlignment="center"/>


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_below="@id/titleConnexion"
        android:layout_centerInParent="true"
        android:layout_marginTop="69dp"
        android:src="@drawable/logo_travel_share" />

    <EditText
        android:id="@+id/txtIdentifiant"
        android:layout_width="207dp"
        android:layout_height="48dp"
        android:layout_below="@id/imageView"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        android:background="@drawable/border_fields"
        android:ems="10"
        android:hint="@string/txtIdentifiant"
        android:inputType="text"
        android:textColorHint="@color/grey"
        android:textSize="20sp"
        android:paddingStart="10dp"/>

    <EditText
        android:id="@+id/txtMdp"
        android:layout_width="207dp"
        android:layout_height="48dp"
        android:layout_below="@id/txtIdentifiant"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        android:background="@drawable/border_fields"
        android:ems="10"
        android:hint="@string/txtMDP"
        android:inputType="textPassword"
        android:textColorHint="@color/grey"
        android:textSize="20sp"
        android:paddingStart="10dp"/>

    <TextView
        android:id="@+id/btnPasDeCompte"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_below="@id/txtMdp"
        android:layout_marginTop="10dp"
        android:text="@string/txtCreerCompte"
        android:textSize="15sp"/>

    <TextView
        android:id="@+id/btnContinuerAnonyme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_below="@id/btnPasDeCompte"
        android:layout_marginTop="10dp"
        android:text="@string/txtContinuerAnonyme"
        android:textSize="15sp"/>

    <Button
        android:id="@+id/btnConnexion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_alignParentBottom="true"
        android:theme="@style/Bouton"
        android:text="@string/txtConnexion"/>

</RelativeLayout>